--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: buffalo bill
 
 # Short bio or description (displayed in the header)
-description: 
+description: ...
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/nateriver1/nateriver1.github.io/images/buffalo bill-logo2.png
+avatar: nateriver1/nateriver1.github.io/images/buffalo bill-logo2.png
 
 #
 # Flags below are optional
